test/parser/Queries/syntax_errors/fail_K-ForExprWithout-31.xq
(:***foo**** eq *** let **** for ******* ne ********* for * eq ****** where ******* ne *******:)
( Test: K-ForExprWithout-31 foo  let                 $   $           :)
(  where Written by: Frans Englich              let               :)
(: Date: 2006-10-05T18:29:37+02:00   foo                   eq  :)
 where (: Purpose: $  Variable which is not ne  in scope.        foo     :)
(:** where  let ******* where ******foo******** where ************** where ****foo**********:)
1 + $xs:NOTEXIST